--- a/app/src/main/res/drawable/progress.xml
+++ b/app/src/main/res/drawable/progress.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   Copyright (c) 2019 . Wilberforce Uwadiegwu. All Rights Reserved.
   -->
 
@@ -7,12 +6,12 @@
     android:fromDegrees="0"
     android:pivotX="50%"
     android:pivotY="50%"
-    android:toDegrees="720" >
+    android:toDegrees="2160"> <!-- 2160 is 6 loops in duration-->
 
     <shape
         android:shape="ring"
         android:thickness="@dimen/progress_circle_thickness"
-        android:useLevel="false" >
+        android:useLevel="false">
 
         <gradient
             android:angle="0"
