--- a/app/src/main/res/navigation/bottom_navigation_graph.xml
+++ b/app/src/main/res/navigation/bottom_navigation_graph.xml
@@ -34,7 +34,7 @@
         </action>
         <action
             android:id="@+id/action_songsFragment_to_songsMenuBottomSheetDialogFragment2"
-            app:destination="@id/songsMenuBottomSheetDialogFragment2" />
+            app:destination="@id/songsMenuBottomSheetDialogFragment" />
     </fragment>
     <fragment
         android:id="@+id/albumsFragment"
@@ -148,7 +148,7 @@
             app:destination="@id/albumSongsFragment" />
     </fragment>
     <dialog
-        android:id="@+id/songsMenuBottomSheetDialogFragment2"
+        android:id="@+id/songsMenuBottomSheetDialogFragment"
         android:name="com.jadebyte.jadeplayer.main.songs.SongsMenuBottomSheetDialogFragment"
         android:label="fragment_songs_menu_bottom_sheet_dialog"
         tools:layout="@layout/fragment_songs_menu_bottom_sheet_dialog">
@@ -169,7 +169,8 @@
             app:argType="com.jadebyte.jadeplayer.main.playlist.Playlist" />
         <action
             android:id="@+id/action_playlistSongsFragment_to_playlistMenuBottomSheetDialogFragment"
-            app:destination="@id/playlistMenuBottomSheetDialogFragment" />
+            app:destination="@id/playlistMenuBottomSheetDialogFragment"
+            app:launchSingleTop="true" />
     </fragment>
     <dialog
         android:id="@+id/newPlaylistDialogFragment"
@@ -180,7 +181,21 @@
         android:id="@+id/playlistMenuBottomSheetDialogFragment"
         android:name="com.jadebyte.jadeplayer.main.playlist.PlaylistMenuBottomSheetDialogFragment"
         android:label="fragment_playlist_menu_bottom_sheet_dialog"
-        tools:layout="@layout/fragment_playlist_menu_bottom_sheet_dialog" >
+        tools:layout="@layout/fragment_playlist_menu_bottom_sheet_dialog">
+        <argument
+            android:name="playlist"
+            app:argType="com.jadebyte.jadeplayer.main.playlist.Playlist" />
+        <action
+            android:id="@+id/action_playlistMenuBottomSheetDialogFragment_to_playlistSongsEditorDialogFragment"
+            app:destination="@id/playlistSongsEditorDialogFragment"
+            app:launchSingleTop="true"
+            app:popUpTo="@+id/playlistSongsFragment" />
+    </dialog>
+    <dialog
+        android:id="@+id/playlistSongsEditorDialogFragment"
+        android:name="com.jadebyte.jadeplayer.main.playlist.PlaylistSongsEditorDialogFragment"
+        android:label="PlaylistSongsEditorDialogFragment"
+        tools:layout="@layout/fragment_playlist_songs_editor_dialog">
         <argument
             android:name="playlist"
             app:argType="com.jadebyte.jadeplayer.main.playlist.Playlist" />
