--- a/app/src/main/res/layout/item_artist.xml
+++ b/app/src/main/res/layout/item_artist.xml
@@ -65,7 +65,7 @@
             app:layout_constraintRight_toRightOf="@+id/sharableView"
             app:layout_constraintTop_toBottomOf="@+id/guideLine"
             app:layout_constraintVertical_bias="0.1"
-            tools:text="23" />
+            tools:text="23 songs in 2 albums" />
 
 
         <androidx.constraintlayout.widget.Guideline
