--- a/app/src/main/res/layout/item_playlist.xml
+++ b/app/src/main/res/layout/item_playlist.xml
@@ -35,7 +35,7 @@
 
 
         <TextView
-            android:id="@+id/songArtist"
+            android:id="@+id/playlistName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_large"
@@ -46,10 +46,35 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="@dimen/text_size_x_small"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/guideLine"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/sharableView"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.9"
             tools:text="My Raps" />
+
+        <TextView
+            android:id="@+id/artistSongsCount"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="@{@plurals/numberOfSongs(playlist.songsCount, playlist.songsCount)}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="@+id/playlistName"
+            app:layout_constraintRight_toRightOf="@+id/playlistName"
+            app:layout_constraintTop_toBottomOf="@+id/guideLine"
+            app:layout_constraintVertical_bias="0.1"
+            tools:text="23 songs" />
+
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideLine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.5" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
