Added a stub GenresFragment

--- a/app/src/main/res/drawable/ic_song_thin.xml
+++ b/app/src/main/res/drawable/ic_song_thin.xml
@@ -2,7 +2,12 @@
   Copyright (c) 2019 . Wilberforce Uwadiegwu. All Rights Reserved.
   -->
 
-<vector android:height="25dp" android:viewportHeight="25"
-    android:viewportWidth="22.552" android:width="23dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#ececec" android:pathData="M22.552,5.507v-4.8a0.708,0.708 0,0 0,-0.922 -0.676l-14.3,4.542a0.71,0.71 0,0 0,-0.493 0.676v13.993a4.977,4.977 0,0 0,-5.558 0.094,2.855 2.855,0 0,0 0,4.767 4.963,4.963 0,0 0,5.689 0,2.974 2.974,0 0,0 1.284,-2.384L8.2521,10.573l12.882,-4.1v8.2a4.977,4.977 0,0 0,-5.558 0.094,2.854 2.854,0 0,0 0,4.767 4.963,4.963 0,0 0,5.689 0,2.972 2.972,0 0,0 1.283,-2.383ZM4.128,23.585c-1.472,0 -2.714,-0.853 -2.714,-1.865s1.242,-1.865 2.714,-1.865 2.713,0.855 2.713,1.865 -1.241,1.865 -2.713,1.865ZM8.256,9.085v-3.322l12.882,-4.091v3.321ZM18.429,19.023c-1.472,0 -2.713,-0.854 -2.713,-1.865s1.241,-1.866 2.713,-1.866 2.714,0.855 2.714,1.866 -1.247,1.865 -2.714,1.865ZM18.429,19.023"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="23dp"
+    android:height="25dp"
+    android:viewportWidth="22.552"
+    android:viewportHeight="25">
+    <path
+        android:fillColor="#ececec"
+        android:pathData="M22.552,5.507v-4.8a0.708,0.708 0,0 0,-0.922 -0.676l-14.3,4.542a0.71,0.71 0,0 0,-0.493 0.676v13.993a4.977,4.977 0,0 0,-5.558 0.094,2.855 2.855,0 0,0 0,4.767 4.963,4.963 0,0 0,5.689 0,2.974 2.974,0 0,0 1.284,-2.384L8.2521,10.573l12.882,-4.1v8.2a4.977,4.977 0,0 0,-5.558 0.094,2.854 2.854,0 0,0 0,4.767 4.963,4.963 0,0 0,5.689 0,2.972 2.972,0 0,0 1.283,-2.383ZM4.128,23.585c-1.472,0 -2.714,-0.853 -2.714,-1.865s1.242,-1.865 2.714,-1.865 2.713,0.855 2.713,1.865 -1.241,1.865 -2.713,1.865ZM8.256,9.085v-3.322l12.882,-4.091v3.321ZM18.429,19.023c-1.472,0 -2.713,-0.854 -2.713,-1.865s1.241,-1.866 2.713,-1.866 2.714,0.855 2.714,1.866 -1.247,1.865 -2.714,1.865ZM18.429,19.023" />
 </vector>
