--- a/app/src/main/res/navigation/bottom_navigation_graph.xml
+++ b/app/src/main/res/navigation/bottom_navigation_graph.xml
@@ -66,6 +66,10 @@
         <action
             android:id="@+id/action_playlistFragment_to_writePlaylistDialogFragment"
             app:destination="@id/writePlaylistDialogFragment" />
+        <action
+            android:id="@+id/action_playlistFragment_to_playlistMenuBottomSheetDialogFragment"
+            app:destination="@id/playlistMenuBottomSheetDialogFragment"
+            app:launchSingleTop="true" />
     </fragment>
     <fragment
         android:id="@+id/searchFragment"
