--- a/app/src/main/res/layout/fragment_genre_songs.xml
+++ b/app/src/main/res/layout/fragment_genre_songs.xml
@@ -1,23 +1,25 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   Copyright (c) 2019 . Wilberforce Uwadiegwu. All Rights Reserved.
   -->
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <import type="android.text.format.DateUtils" />
+
         <variable
-            name="album"
-            type="com.jadebyte.jadeplayer.main.albums.Album" />
+            name="genre"
+            type="com.jadebyte.jadeplayer.main.genres.Genre" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context=".main.albums.AlbumSongsFragment">
+        tools:context=".main.genres.GenreSongsFragment">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
@@ -33,6 +35,7 @@
                 app:contentScrim="@color/colorBackground"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -42,87 +45,61 @@
 
 
                     <ImageView
+                        android:id="@+id/genreArt"
                         android:layout_width="143dp"
                         android:layout_height="146dp"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        tools:src="@drawable/thumb_default_short"
-                        android:scaleType="centerCrop"
                         android:layout_marginStart="@dimen/margin_x_large"
                         android:layout_marginTop="@dimen/margin_medium"
-                        android:id="@+id/albumArt"
-                        app:artistSrc="@{album}"
-                        android:contentDescription="@string/album_art" />
+                        android:contentDescription="@string/album_art"
+                        android:scaleType="centerCrop"
+                        app:genreSrc="@{genre}"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:src="@drawable/thumb_default_short" />
 
                     <TextView
-                        android:id="@+id/albumName"
+                        android:id="@+id/genreNameField"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/margin_x_large"
+                        android:layout_marginRight="@dimen/margin_x_large"
                         android:ellipsize="end"
                         android:maxLines="1"
-                        android:text="@{album.name}"
+                        android:text="@{genre.name}"
                         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                         android:textSize="@dimen/text_size_large"
                         android:textStyle="bold"
-                        android:layout_marginLeft="@dimen/margin_x_large"
-                        android:layout_marginRight="@dimen/margin_x_large"
+                        app:layout_constraintBottom_toBottomOf="@+id/genreArt"
+                        app:layout_constraintLeft_toRightOf="@+id/genreArt"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintLeft_toRightOf="@+id/albumArt"
-                        app:layout_constraintBottom_toTopOf="@+id/albumArtist"
-                        tools:text="Extensions" />
-
-                    <TextView
-                        android:id="@+id/albumArtist"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:text="@{album.artist}"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                        app:layout_constraintLeft_toLeftOf="@+id/albumName"
-                        app:layout_constraintTop_toTopOf="@+id/albumArt"
-                        app:layout_constraintRight_toRightOf="@+id/albumName"
-                        app:layout_constraintBottom_toBottomOf="@+id/albumArt"
-                        tools:text="Nasty C" />
-
-                    <TextView
-                        android:id="@+id/albumYear"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:text="@{album.year}"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                        app:layout_constraintLeft_toLeftOf="@+id/albumName"
-                        app:layout_constraintRight_toRightOf="@+id/albumName"
-                        app:layout_constraintTop_toBottomOf="@+id/albumArtist"
-                        tools:text="2018" />
+                        app:layout_constraintTop_toTopOf="@+id/genreArt"
+                        tools:text="My Trap" />
 
 
                     <ImageButton
+                        android:id="@+id/moreOptions"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/moreOptions"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintBottom_toBottomOf="@+id/albumArt"
-                        android:src="@drawable/ic_more_colored"
-                        android:layout_marginRight="@dimen/margin_x_large"
                         android:layout_marginLeft="@dimen/margin_x_large"
-                        android:padding="@dimen/padding_medium"
+                        android:layout_marginRight="@dimen/margin_x_large"
+                        android:background="?attr/selectableItemBackgroundBorderless"
                         android:contentDescription="@string/more_options"
-                        android:background="?attr/selectableItemBackgroundBorderless"/>
+                        android:padding="@dimen/padding_medium"
+                        android:src="@drawable/ic_more_colored"
+                        app:layout_constraintBottom_toBottomOf="@+id/genreArt"
+                        app:layout_constraintRight_toRightOf="parent" />
 
                     <TextView
-                        android:id="@+id/albumSongsDuration"
+                        android:id="@+id/genreSongsDuration"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/margin_x_large"
                         android:ellipsize="end"
                         android:maxLines="1"
-                        android:textSize="@dimen/text_size_x_small"
-                        android:layout_marginTop="@dimen/margin_x_large"
                         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                        app:layout_constraintLeft_toLeftOf="@+id/albumArt"
-                        app:layout_constraintTop_toBottomOf="@+id/albumArt"
+                        android:textSize="@dimen/text_size_x_small"
+                        app:layout_constraintLeft_toLeftOf="@+id/genreArt"
+                        app:layout_constraintTop_toBottomOf="@+id/genreArt"
                         tools:text="10 songs, 56 minutes" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -143,9 +120,10 @@
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/albumSongsRV"
+            android:id="@+id/genreSongsRV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/margin_small"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
