--- a/app/src/main/res/layout/fragment_playlist_songs.xml
+++ b/app/src/main/res/layout/fragment_playlist_songs.xml
@@ -15,87 +15,112 @@
             type="com.jadebyte.jadeplayer.main.playlist.Playlist" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         tools:context=".main.playlist.PlaylistSongsFragment">
 
-
-        <Button
-            android:id="@+id/sectionBackButton"
-            style="@style/AppTheme.SectionBackButton"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-        <ImageView
-            android:id="@+id/playlistArt"
-            android:layout_width="143dp"
-            android:layout_height="146dp"
-            android:layout_marginStart="@dimen/margin_x_large"
-            android:layout_marginTop="@dimen/margin_medium"
-            android:contentDescription="@string/album_art"
-            android:scaleType="centerCrop"
-            app:playlistSrc="@{playlist}"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sectionBackButton"
-            tools:src="@drawable/thumb_default_short" />
-
-        <TextView
-            android:id="@+id/playlistNameField"
-            android:layout_width="0dp"
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_x_large"
-            android:layout_marginRight="@dimen/margin_x_large"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:text="@{playlist.name}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="@dimen/text_size_large"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/playlistArt"
-            app:layout_constraintLeft_toRightOf="@+id/playlistArt"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/playlistArt"
-            tools:text="My Trap" />
+            android:background="@color/colorBackground"
+            android:fitsSystemWindows="true"
+            android:stateListAnimator="@null">
+
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                app:contentScrim="@color/colorBackground"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="?attr/actionBarSize"
+                    android:paddingTop="@dimen/padding_xx_large"
+                    app:layout_collapseMode="parallax">
 
 
-        <ImageButton
-            android:id="@+id/moreOptions"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_x_large"
-            android:layout_marginRight="@dimen/margin_x_large"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:contentDescription="@string/more_options"
-            android:padding="@dimen/padding_medium"
-            android:src="@drawable/ic_more_colored"
-            app:layout_constraintBottom_toBottomOf="@+id/playlistArt"
-            app:layout_constraintRight_toRightOf="parent" />
+                    <ImageView
+                        android:id="@+id/playlistArt"
+                        android:layout_width="143dp"
+                        android:layout_height="146dp"
+                        android:layout_marginStart="@dimen/margin_x_large"
+                        android:contentDescription="@string/album_art"
+                        android:scaleType="centerCrop"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:playlistSrc="@{playlist}"
+                        tools:src="@drawable/thumb_default_short" />
 
-        <TextView
-            android:id="@+id/playlistSongsDuration"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_x_large"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textSize="@dimen/text_size_x_small"
-            app:layout_constraintLeft_toLeftOf="@+id/playlistArt"
-            app:layout_constraintTop_toBottomOf="@+id/playlistArt"
-            tools:text="10 songs, 56 minutes" />
+                    <TextView
+                        android:id="@+id/playlistNameField"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/margin_x_large"
+                        android:layout_marginRight="@dimen/margin_x_large"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:text="@{playlist.name}"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                        android:textSize="@dimen/text_size_large"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="@+id/playlistArt"
+                        app:layout_constraintLeft_toRightOf="@+id/playlistArt"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="@+id/playlistArt"
+                        tools:text="My Trap" />
 
+
+                    <ImageButton
+                        android:id="@+id/moreOptions"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/margin_x_large"
+                        android:layout_marginRight="@dimen/margin_x_large"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:contentDescription="@string/more_options"
+                        android:padding="@dimen/padding_medium"
+                        android:src="@drawable/ic_more_colored"
+                        app:layout_constraintBottom_toBottomOf="@+id/playlistArt"
+                        app:layout_constraintRight_toRightOf="parent" />
+
+                    <TextView
+                        android:id="@+id/playlistSongsDuration"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/margin_x_large"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                        android:textSize="@dimen/text_size_x_small"
+                        app:layout_constraintLeft_toLeftOf="@+id/playlistArt"
+                        app:layout_constraintTop_toBottomOf="@+id/playlistArt"
+                        tools:text="10 songs, 56 minutes" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.appcompat.widget.Toolbar
+                    android:layout_width="wrap_content"
+                    android:layout_height="?attr/actionBarSize"
+                    android:minHeight="?attr/actionBarSize"
+                    app:layout_collapseMode="pin">
+
+                    <Button
+                        android:id="@+id/sectionBackButton"
+                        style="@style/AppTheme.SectionBackButton" />
+                </androidx.appcompat.widget.Toolbar>
+
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+        </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/playlistSongsRV"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="@dimen/margin_small"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/playlistSongsDuration" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
