--- a/app/src/main/res/layout/fragment_genres.xml
+++ b/app/src/main/res/layout/fragment_genres.xml
@@ -33,8 +33,26 @@
         android:layout_height="0dp"
         android:paddingTop="@dimen/padding_small"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/fastScroller"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sectionTitle" />
+
+    <com.reddit.indicatorfastscroll.FastScrollerView
+        android:id="@+id/fastScroller"
+        android:layout_width="32dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/genresRV"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/genresRV"
+        app:layout_constraintTop_toTopOf="@+id/genresRV" />
+
+    <com.reddit.indicatorfastscroll.FastScrollerThumbView
+        android:layout_width="40dp"
+        android:layout_height="0dp"
+        android:id="@+id/fastScrollerThumb"
+        android:layout_marginEnd="@dimen/margin_large"
+        app:layout_constraintBottom_toBottomOf="@+id/fastScroller"
+        app:layout_constraintEnd_toStartOf="@+id/fastScroller"
+        app:layout_constraintTop_toTopOf="@+id/fastScroller" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
